# myapp_repo

./: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_04_30_1711-2addc90dff91_create_table_places.py  2026_04_30_1712-22c858234338_create_table_events.py
app/: main.py
app/core/: __init__.py  config.py
app/crud/: __init__.py  event.py
app/database/: __init__.py  db_constructor.py  make_test_data.py
app/models/: __init__.py  event.py  place.py
app/schemas/: __init__.py  event.py  place.py
app/views/: __init__.py  event.py
postgresdata/base/1/: pg_internal.init
postgresdata/base/5/: pg_internal.init
postgresdata/global/: 1260  1262  2671  pg_control  pg_internal.init
