[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
